# session-orchestrator

./: .claudeignore  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .lintstagedrc.mjs  .mcp.json  .npmrc  .prettierignore  .prettierrc  .vault.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  commitlint.config.mjs  eslint.config.js  node_modules  package-lock.json  package.json  vitest.config.mjs
.claude/: loop.md  settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: config.toml  plugin.json
.github/: pull_request_template.md
.husky/: commit-msg  pre-commit
agents/: AGENTS.md  analyst.md  architect-reviewer.md  code-implementer.md  db-specialist.md  dialectic-deriver.md  docs-writer.md  eval-judge.md  memory-proposal-collector.md  qa-strategist.md  security-reviewer.md  session-reviewer.md  skill-applied-judge.md  test-writer.md  ui-developer.md  ux-evaluator.md
commands/: autopilot-multi.md  autopilot.md  bootstrap.md  brainstorm.md  close.md  debug.md  discovery.md  dispatcher.md  eval.md  evolve.md  go.md  grill.md  harness-audit.md  memory-cleanup.md  persona-panel.md  plan.md  portfolio.md  reconcile.md  repo-audit.md  session.md  spinout.md  sunset-review.md  templates-ack.md  test.md
docs/: README.md  USER-GUIDE.md  ci-setup.md  codex-setup.md  components.md  cursor-setup.md  events-schema.md  migration-v3.md  owner-config-schema.md  persona-panel.md  pi-setup.md  (+9 more)
templates/python-uv/: README.md  pyproject.toml
(+1462 files in other folders)
